# document-intake-review

./: .dockerignore  .env.example  .gitattributes  .gitignore  Dockerfile  README.md  docker-compose.yml  errors.md  package-lock.json  package.json  playwright.config.ts  pyproject.toml
.github/workflows/: backend.yml  playwright.yml
app/: __init__.py  api.py  config.py  database.py  exports.py  gmail.py  main.py  models.py  parser.py  schemas.py  service.py
docs/: qa-test-plan.md
expected-output/: clean_records.csv  dead_letter.csv
frontend/: Dockerfile  eslint.config.js  index.html  nginx.conf  package-lock.json  package.json  tsconfig.app.tsbuildinfo  tsconfig.node.tsbuildinfo  vite.config.js  vite.config.ts
frontend/src/: App.test.tsx  App.tsx  api.ts  main.tsx  styles.css  types.ts
sample-data/: sample-doc-template.json  sample-doc-template.txt
sample-data/inbox/: invoice_1001.txt  invoice_1002.json  receipt_2001.txt  weird_doc.txt
scripts/: categorizer.py  generate_synthetic_pdfs.py  gmail_auth.py  parser.py  process_documents.py  process_gmail.py
tests/: conftest.py  test_api.py  test_exports.py  test_gmail.py  test_parser.py
tests/e2e/: accessibility.spec.ts  api.spec.ts  fixtures.ts  ui.spec.ts
