[build-system]
requires = ["setuptools>=69"]
build-backend = "setuptools.build_meta"

[project]
name = "document-intake-review"
version = "0.1.0"
description = "Auditable document intake and human review backend"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.115,<1",
  "uvicorn[standard]>=0.30,<1",
  "pydantic-settings>=2.6,<3",
  "sqlalchemy>=2.0,<3",
  "psycopg[binary]>=3.2,<4",
  "pymupdf>=1.24,<2",
  "python-multipart>=0.0.12,<1",
]

[project.optional-dependencies]
dev = ["httpx>=0.27,<1", "pytest>=8.3,<9", "pytest-cov>=5,<7", "ruff>=0.8,<1"]

[tool.setuptools.packages.find]
include = ["app*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q --disable-warnings"

[tool.ruff]
line-length = 100
target-version = "py311"

